--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monster",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sunrawat.github.io/reactlistpages",
+  "homepage": "https://sunrawat.github.io/monster-react-demo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
